FindBugs Errors