@@ -233,7 +233,7 @@ public class XYTableCategoryData extends AbstractDataset
     public Number getValue(int row, int column) {
         Number x = null;
         if ((column < 0) || (column >= tableModel.getNCols()))  {
-              x = new Integer(row);
+              x = Integer.valueOf(row);
         } else {
             Object xObject = tableModel.getValueAt(row, column);
             if (xObject instanceof Number) {
